syntax="proto3";

package integration_service;
option go_package="genproto/integration_service";

service PayzeService {
    rpc GeneratePayzeLink(PayzeLinkRequest) returns (PayzeLinkResponse){}
    rpc GeneratePayzeLinkSvod(PayzeLinkRequestSvod) returns (PayzeLinkResponse){}

}

message PayzeLinkRequest {
    string order_id = 1;
    int32 price = 2; 
    string product_id = 3;
    string lang = 4;
    string redirect_url = 5;
    string product_name = 6;
}

message PayzeLinkResponse {
    string link = 1;
}

message PayzeLinkRequestSvod {
    string order_id = 1;
    int32 price = 2; 
    string product_id = 3;
    string lang = 4;
    string redirect_url = 5;
    string product_name = 6;
}
